Icon Hover Introduced

--- a/force-app/main/default/lwc/introduction/introduction.html
+++ b/force-app/main/default/lwc/introduction/introduction.html
@@ -29,9 +29,9 @@
                 Contact Me </button>
         </div>
         <div class="flex justify-center items-center py-4">
-            <img class="glow-icon cursor-pointer w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={github} alt="GitHub icon">
-            <img class="glow-icon cursor-pointer w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={leetcode} alt="LeetCode icon">
-            <img class="glow-icon cursor-pointer w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={gmail} alt="Gmail icon">
+            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={github} alt="GitHub icon">
+            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={leetcode} alt="LeetCode icon">
+            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={gmail} alt="Gmail icon">
             <!-- <img class="glow-icon cursor-pointer w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={linkedIn} alt="LinkedIn icon"> -->
         </div>
     </div>
