--- a/force-app/main/default/lwc/introduction/introduction.html
+++ b/force-app/main/default/lwc/introduction/introduction.html
@@ -21,7 +21,8 @@
                     together!</span></p>
         </div>
         <div class="text-center py-2">
-            <button type="button"
+            <button type="button"  onclick={downloadResume}
+                target="_blank"
                 class="text-sm md:text-base text-base cursor-pointer border border-teal-300 rounded-full font-medium text-gray-100 hover:text-teal-300 px-3 py-2 mx-2 my-1">
                 Download CV </button>
             <button type="button"
@@ -29,9 +30,15 @@
                 Contact Me </button>
         </div>
         <div class="flex justify-center items-center py-4">
-            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={github} alt="GitHub icon">
-            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={leetcode} alt="LeetCode icon">
-            <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={gmail} alt="Gmail icon">
+            <a href="https://github.com/selectivegravity" target="_blank" rel="noopener noreferrer">
+                <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={github} alt="GitHub icon">
+            </a>
+            <a href="https://leetcode.com/u/abhiaman99/" target="_blank" rel="noopener noreferrer">
+                <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={leetcode} alt="LeetCode icon">
+            </a>
+            <a href="mailto:amanofficial.1599@gmail.com" target="_blank" rel="noopener noreferrer">
+                <img class="cursor-pointer hover:opacity-50 w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={gmail} alt="Gmail icon">
+            </a>
             <!-- <img class="glow-icon cursor-pointer w-8 md:w-8 lg:w-10 h-8 md:h-8 lg:h-10 mx-2 md:mx-3 lg:mx-4 my-1" src={linkedIn} alt="LinkedIn icon"> -->
         </div>
     </div>
